# week3

week3-ml-baseline-system/: pyproject.toml
week3-ml-baseline-system/data/processed/: features.csv
week3-ml-baseline-system/src/: ml-baseline.py
