[project]
name = "csv-profiler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "streamlit",
  "pandas",
  "pyarrow",
  "plotly>=6.5.0",
  "nbformat>=5.10.4",
  "kaleido>=1.2.0",
  "jupyterlab",
  "notebook>=7.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
ml-baseline = "src.main:cli"
[tool.hatch.build.targets.wheel]
packages = ["src/bootcamp_data"]